/* Buton label for Edit action */
"action.generic.edit" = "Edit";

/* Button label for a generic show action */
...

/* Button label for managing favorites */
"action.manage.favorites" = "Manage";

/* Button label for OK action */
...

/* Autofill Logins menu item opening the login list */
"action.title.autofill.logins" = "Passwords";

/* Confirmation of Add to Bookmarks action in Add All Open Tabs to Bookmarks alert */
...

/* Button: Open bookmarks list */
"action.title.bookmarks" = "Bookmarks";

/* Cancel action - button shown in alert */
"action.title.cancel" = "Cancel";

/* Copy action */
...

/* Delete action - button shown in alert */
"action.title.delete" = "Delete";

/* Disable protection action */
...

/* No comment provided by engineer. */
"action.title.forgetAll" = "Close Tabs and Clear Data";

/* Confirmation message */
...

/* Remove Favorite action */
"action.title.remove.favorite" = "Remove Favorite";

/* Report broken site action */
...

/* Save action - button shown in alert */
"action.title.save" = "Save";

/* Add to Bookmarks action */
...

/* Add to Favorites action */
"action.title.save.favorite" = "Add Favorite";

/* Settings action */
"action.title.settings" = "Settings";

/* Share action */
...

/* New tab menu item opening a new tab */
"action.title.tab.new" = "New Tab";

/* Settings label for bottom position for the address bar */
...

/* Accessibility title for a Hide Password button replacing displayed password with ***** */
"autofill.hide-password" = "Hide Password";

/* Button label to get link to download the desktop browser */
...

/* Delete button when deleting an autofill login */
"autofill.logins.details.delete" = "Delete Password";

/* Autofill alert button confirming delete autofill login */
...

/* Placeholder for url field on autofill login details */
"autofill.logins.details.edit.url-placeholder" = "example.com";

/* Placeholder for userbane field on autofill login details */
...

/* Reason for auth when opening login list */
"autofill.logins.list.auth.reason" = "Unlock device to access passwords";

/* Title for close navigation button */
...

/* Placeholder for search field on autofill login listing */
"autofill.logins.list.search-placeholder" = "Search passwords";

/* Subtext under Autofill Settings briefly explaining security to alleviate user concerns. */
...

/* Title displayed when there are no results on Autofill search */
"autofill.logins.search.no-results.title" = "No Results";

/* Do not translate - stringsdict entry */
...

/* Accessibility title for a Show Password button displaying actial password instead of ***** */
"autofill.show-password" = "Show Password";

/* Message displayed to the user when they are logged out of Email protection. */
...

/* Title of button to dismiss the screen */
"data.import.summary.button.title.done" = "Done";

/* Title of button to prompt users to sync and back up their imported data. Reads as 'Sync & Back Up Passwords | Bookmarks | Data' depending on what the user has chosen to import */
...

/* Empty list state placeholder title */
"empty.bookmarks" = "No bookmarks added yet";

/* Empty list state placeholder subtitle */
...

/* This describes empty tab */
"homeTab.searchAndFavorites" = "Search or enter address";

/* Home tab title */
...

/* No comment provided by engineer. */
"menu.button.hint" = "Browsing Menu";

/* Title for back button in navigation bar */
...

/* No comment provided by engineer. */
"section.title.favorites" = "Favorites";

/* Name of the option the user can chose to give general browser feedback */
...

/* Settings screen cell text for passwords */
"settings.logins" = "Passwords & Autofill";

/* The name of the settings section containing main settings */
...

/* Select all tabs */
"tab.select.all" = "Select All";

/* Deselect all tabs */
...

/* Tab Switcher Accessibility Label */
"tab.switcher.accessibility.label" = "Tab Switcher";

/* Bookmark all tabs menu item */
...
