...

        accessoryButton.accessibilityLabel = "AI Chat"
        accessoryButton.accessibilityIdentifier = "\(Constant.accessibilityPrefix).Button.AI Chat"
        accessoryButton.accessibilityTraits = .button

        // This is for compatibility purposes with old OmniBar
        searchAreaView.textField.accessibilityIdentifier = "searchEntry"
        searchAreaView.textField.accessibilityTraits = .searchField

        privacyIconView?.accessibilityIdentifier = "PrivacyIcon"
        privacyIconView?.accessibilityTraits = .button

        searchAreaView.voiceSearchButton.accessibilityLabel = "Voice Search"
...
