...
        button.addAction(action(image: DesignSystemImages.Glyphs.Size24.fireSolid) { [weak self] in
            self?.burn(sender: self!.barsHandler.fireButton)
        }, for: .touchUpInside)
        button.setImage(DesignSystemImages.Glyphs.Size24.fireSolid)
        button.frame = CGRect(x: 0, y: 0, width: 34, height: 44)
        barsHandler.fireButton.customView = button
        barsHandler.fireButton.accessibilityLabel = "Close all tabs and clear data"
    }

}

// MARK: Edit menu actions
extension TabSwitcherViewController {
...
