# firebutton.yaml
appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - release

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://privacy-test-pages.site/features/local-storage.html"
- pressKey: Enter

# Add a cookie
- assertVisible: "Storage Counter: undefined"
- assertVisible: "Cookie Counter:"
- assertNotVisible: "Cookie Counter: 1"
- assertNotVisible: "Storage Counter: 1"
- assertVisible: "Manual Increment"
- tapOn: "Manual Increment"
- assertVisible: "Cookie Counter: 1"
- assertVisible: "Storage Counter: 1"

# Load a new tab
- longPressOn: "Tab Switcher"
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://example.com"
- pressKey: Enter

- assertVisible: ".*Example Domain.*"

# Close tab
- tapOn: "Tab Switcher"
- tapOn: "Close \"Example Domain\" at example.com"
- tapOn: "New Tab"

# Check history
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "ex"
- assertVisible: "example.com"
- assertVisible: "Example Domain"
- tapOn: "Example Domain"

# Fire button
- tapOn: "Close Tabs and Clear Data"
- tapOn: "Close Tabs and Clear Data"

- assertNotVisible: "https://example.com/"
- assertVisible: "Search or enter address"
- tapOn: "Cancel"
- tapOn: "Tab Switcher"
- assertNotVisible: "Example Domain"
- assertVisible: "1 Private Tab"
- tapOn: "Done"

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"

- inputText: "ex"
- assertNotVisible: "example.com"
- assertNotVisible: "Example Domain"

- pressKey: Backspace
- pressKey: Backspace

- inputText: "https://privacy-test-pages.site/features/local-storage.html"
- pressKey: Enter
- assertVisible: "Storage Counter: undefined"
- assertVisible: "Cookie Counter:"

# Clear from Tab Switcher

- tapOn: "Tab Switcher"
- assertVisible: "1 Private Tab"
- tapOn: "Close all tabs and clear data"
- tapOn: "Close Tabs and Clear Data"

- assertNotVisible: "https://privacy-test-pages.site/features/local-storage.html"
- assertVisible: "Search or enter address"
- tapOn: "Cancel"
- tapOn: "Tab Switcher"
- assertNotVisible: "Example Domain"
- assertVisible: "1 Private Tab"
- tapOn: "Done"




